Fix some UI bugs in standalone mode.
- UI getting too wide in table view
- not correctly detecting enterprise mode

Also limit the proxy the minimal set of endpoints needed for the UI,
so the proxy can't be used to perform administrative tasks.

Reviewed-on: http://review.couchbase.org/91229
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/app-standalone.css
+++ b/query-ui/app-standalone.css
@@ -1,5 +1,6 @@
 .main-content {
   margin: 0;
+  width: 100%;
 }
 .wb-wrapper {
   margin: 0 !important;
